⛱⚾️ Checkpoint ./.glitch-assets:69870694/469 ./public/meta-heroes.html:69870694/452:71334325/36

--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -34,14 +34,14 @@
     </thead>
     <tbody>
       <tr>
-        <td>Granger<img src ="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmobile-legends.fandom.com%2Fwiki%2FBane&psig=AOvVaw2jXFv_w4aSvS9qDshzaS-Z&ust=1734098339454000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCb3u2xoooDFQAAAAAdAAAAABAE" alt="granger" width="200" height="100"></td>
+        <td>Granger<img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
         <td>Unlimited First and Second Skill</td>
         <td>Angela</td>
       </tr>
       <tr>
         <td>Bane<img src="https://cdn.glitch.global/e8dd92cc-6185-4706-97fd-4ad4578473d9/dehyaart5.webp?v=1734011136224" alt="dehya" width="200" height="100"></td>
         <td>For His Mage Build</td>
-        <td>Faramis (if Mirkki Lemuelle Layacan Seguin)</td>
+        <td>Faramis</td>
       </tr>
     </tbody>
   </table>
