🐵🛳 Checkpoint ./public/index.html:71334325/372 ./public/meta-heroes.html:71334325/19 ./public/style.css:71334325/1290

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Mobile Legends:Bang Bang, Heroes, Bulds, Meta, Meta Heroes, Combos" />
+    <meta name="description" content="A website that identifies if a number is weird or not" />
+    <meta name="author" content="Mirkki Lemuelle L. Seguin" />
+    <meta name="revised" content="September 23, 2024" />
     <title>Mobile Legend Meta Heroes: Builds and Skill Combos</title>
     <link rel="stylesheet" href="style.css">
 </head>
