🍖🍚 Checkpoint ./public/style.css:71334325/2268 ./public/index.html:71334325/337 ./CODE_OF_CONDUCT.md:71334325/20283 ./public/about.html:71334325/6761 ./public/members.html:71334325/6761 ./public/contact.html:71334325/6761

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <nav class="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
         </ul>
@@ -31,6 +32,7 @@
             <h3>Why Mobile Legends?</h3>
             <p>Discover the thrill of 5v5 battles, diverse heroes, and strategic gameplay that has captivated millions worldwide.</p>
         </section>
+        
 
         </main>
 
