--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
             <li><a href="about.html">About</a></li>
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
+            <li><a href="members.html">Members</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
 
