--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="slideshow"></div>
+    <script src="script.js"></script>
     <header>
         <h1>Mobile Legend Meta Heroes: Builds and Skill Combos</h1>
         <p>Your guide to dominating the Mobile Legends battlefield.</p>
