🌼⛺️ Checkpoint ./public/index.js:71334325/11500 ./public/index.html:71334325/3843 ./public/style.css:71334325/3018 ./.glitch-assets:71334325/2473

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Mobile Legends:Bang Bang, Heroes, Bulds, Meta, Meta Heroes, Combos" />
+    <meta name="keywords" content="Mobile Legends:Bang Bang, Heroes, Builds, Meta, Meta Heroes, Combos" />
     <meta name="description" content="A website that identifies if a number is weird or not" />
     <meta name="author" content="Mirkki Lemuelle L. Seguin" />
     <meta name="revised" content="September 23, 2024" />
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Background Slideshow -->
     <div class="slideshow"></div>
-    <script src="script.js"></script>
+
     <header>
         <h1>Mobile Legend Meta Heroes: Builds and Skill Combos</h1>
         <p>Your guide to dominating the Mobile Legends battlefield.</p>
@@ -36,9 +37,7 @@
             <h3>Why Mobile Legends?</h3>
             <p>Discover the thrill of 5v5 battles, diverse heroes, and strategic gameplay that has captivated millions worldwide.</p>
         </section>
-        
-
-        </main>
+    </main>
 
     <footer>
         <p>© 2024 Mobile Legend Meta Heroes</p>
