--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -37,13 +37,13 @@
     </thead>
     <tbody>
       <tr>
-        <td>Granger<img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
+        <td>Granger<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
         <td>Unlimited First and Second Skill</td>
         <td>Angela</td>
       </tr>
       <tr>
-        <td>Bane<img src="https://cdn.glitch.global/e8dd92cc-6185-4706-97fd-4ad4578473d9/dehyaart5.webp?v=1734011136224" alt="dehya" width="200" height="100"></td>
-        <td>For His Mage Build</td>
+        <td>Bane<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Mage build; results to high burst damage, anti heal</td>
         <td>Faramis</td>
       </tr>
     </tbody>
