🌉🎲 Checkpoint ./public/index.js:71334325/4168 ./public/meta-heroes.html:69870694/1096 ./public/style.css:71334325/3262 ./public/index.html:71334325/35

--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -37,12 +37,27 @@
     </thead>
     <tbody>
       <tr>
-        <td>Granger<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
-        <td>Unlimited First and Second Skill</td>
+        <td>Joy<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
+        <td>Duration of Burst while being CC immuned</td>
         <td>Angela</td>
       </tr>
       <tr>
-        <td>Bane<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Burst and immense Anti-CC</td>
+        <td>Faramis</td>
+      </tr>
+       <tr>
+        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Mage build; results to high burst damage, anti heal</td>
+        <td>Faramis</td>
+      </tr>
+       <tr>
+        <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Mage build; results to high burst damage, anti heal</td>
+        <td>Faramis</td>
+      </tr>
+      <tr>
+        <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
         <td>Mage build; results to high burst damage, anti heal</td>
         <td>Faramis</td>
       </tr>
