--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -37,17 +37,35 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Granger<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
-        <td>Unlimited First and Second Skill</td>
+     <tr>
+        <td>Joy<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
+        <td>Duration of Burst while being CC immuned</td>
         <td>Angela</td>
-        <td>bla</td>
+        <td></td>
       </tr>
       <tr>
-        <td>Bane<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
-        <td>bla</td>
-        <td>Faramis</td>
-        <td>Bla</td>
+        <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>High Burst, High Mobility, immense Anti-CC</td>
+        <td>Atlas</td>
+        <td></td>
+      </tr>
+       <tr>
+        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>High Burst Damage, Strong Early Game, Global Ultimate</td>
+        <td>Floryn</td>
+        <td></td>
+      </tr>
+       <tr>
+        <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>High Burst Damage, Sustain, Flexibility</td>
+        <td>Angela</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Sustain, Skill Cap, Flexibility</td>
+        <td>Khufra</td>
+        <td></td>
       </tr>
     </tbody>
           </table>
