--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -43,23 +43,23 @@
       </tr>
       <tr>
         <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
-        <td>Burst and immense Anti-CC</td>
-        <td>Faramis</td>
+        <td>High Burst, High Mobility, immense Anti-CC</td>
+        <td>Atlas</td>
       </tr>
        <tr>
         <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
-        <td>Mage build; results to high burst damage, anti heal</td>
-        <td>Faramis</td>
+        <td>High Burst Damage, Strong Early Game, Global Ultimate</td>
+        <td>Floryn</td>
       </tr>
        <tr>
         <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
-        <td>Mage build; results to high burst damage, anti heal</td>
-        <td>Faramis</td>
+        <td>High Burst Damage, Sustain, Flexibility</td>
+        <td>Angela</td>
       </tr>
       <tr>
         <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
-        <td>Mage build; results to high burst damage, anti heal</td>
-        <td>Faramis</td>
+        <td>Sustain, Skill Cap, Flexibility</td>
+        <td>Khufrac</td>
       </tr>
     </tbody>
           </table>
