🎢⛈ Checkpoint ./public/effective-combos.html:69870694/35 ./public/meta-heroes.html:69870694/1243 ./.glitch-assets:69870694/1888

--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -34,6 +34,7 @@
         <th>Combo</th>
         <th>Spell</th>
         <th>Emblem</th>
+        <th>Build</th>
       </tr>
     </thead>
     <tbody>
