--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -37,29 +37,29 @@
     </thead>
     <tbody>
       <tr>
-        <td>Joy<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-12%2010.24.53%20PM.png?v=1734013510420" alt="likeaboss" width="200" height="100"></td>
+        <td>Joy<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/joy.jpeg?v=1734540340460" alt="likeaboss" width="200" height="100"></td>
         <td>Duration of Burst while being CC immuned</td>
-        <td>Angela</td>
+        <td>Angela<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/benedetta.jpeg?v=1734540607944" alt="dehya" width="200" height="100"></td>
       </tr>
       <tr>
-        <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/benedetta.jpeg?v=1734540607944" alt="dehya" width="200" height="100"></td>
         <td>High Burst, High Mobility, immense Anti-CC</td>
         <td>Atlas</td>
       </tr>
        <tr>
-        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/hc.jpeg?v=1734540673251" alt="dehya" width="200" height="100"></td>
         <td>High Burst Damage, Strong Early Game, Global Ultimate</td>
         <td>Floryn</td>
       </tr>
        <tr>
-        <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/julian.jpeg?v=1734540743197" alt="dehya" width="200" height="100"></td>
         <td>High Burst Damage, Sustain, Flexibility</td>
         <td>Angela</td>
       </tr>
       <tr>
-        <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?v=1734538316113" alt="dehya" width="200" height="100"></td>
+        <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/arlott.jpeg?v=1734540821840" alt="dehya" width="200" height="100"></td>
         <td>Sustain, Skill Cap, Flexibility</td>
-        <td>Khufrac</td>
+        <td>Khufra</td>
       </tr>
     </tbody>
           </table>
