🍭👂 Checkpoint ./public/effective-combos.html:69870694/4620 ./.glitch-assets:69870694/1917 ./public/send_message.php:71334325/1475 ./public/contact.html:71334325/6961 ./CODE_OF_CONDUCT.md:71334325/20283 ./public/glitch.json:71334325/6792 ./public/composer.json:71334325/6799 ./public/start.sh:71334325/6793

--- a/public/contact.html
+++ b/public/contact.html
@@ -31,7 +31,7 @@
         <section id="contact-form">
             <h2>Get in Touch</h2>
             <p>If you have any questions or suggestions, feel free to reach out to us using the form below:</p>
-            <form action="send_message.php" method="post">
+            <form action="/send_message.php" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
 
