--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -40,33 +40,38 @@
     <tbody>
      <tr>
        <td>Joy<br><img src ="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/joy.jpeg?v=1734540340460" alt="likeaboss" width="200" height="100"></td>
-        <td>Duration of Burst while being CC immuned</td>
+        <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
         <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
-        <td></td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
       </tr>
       <tr>
         <td>Benedetta<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/benedetta.jpeg?v=1734540607944" alt="dehya" width="200" height="100"></td>
-        <td>High Burst, High Mobility, immense Anti-CC</td>
-        <td>Atlas</td>
-        <td></td>
+        <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/a323de90-fda7-403e-aa43-85e579b40579.image.png?v=1734542200960" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.18.22%20AM.png?v=1734542310291" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
       </tr>
        <tr>
        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/hc.jpeg?v=1734540673251" alt="dehya" width="200" height="100"></td>
-        <td>High Burst Damage, Strong Early Game, Global Ultimate</td>
-        <td>Floryn</td>
-        <td></td>
+        <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
       </tr>
        <tr>
         <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/julian.jpeg?v=1734540743197" alt="dehya" width="200" height="100"></td>
-        <td>High Burst Damage, Sustain, Flexibility</td>
-        <td>Angela</td>
-        <td></td>
+        <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
       </tr>
       <tr>
          <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/arlott.jpeg?v=1734540821840" alt="dehya" width="200" height="100"></td>
-        <td>Sustain, Skill Cap, Flexibility</td>
-        <td>Khufra</td>
-        <td></td>
+        <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
       </tr>
     </tbody>
           </table>
