🏹🚈 Checkpoint ./public/effective-combos.html:69870694/1980 ./.glitch-assets:69870694/3294 ./public/contact.html:71334325/4539 ./public/index.html:71334325/111 ./public/index.js:71334325/179

--- a/public/contact.html
+++ b/public/contact.html
@@ -23,7 +23,7 @@
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
             <li><a href="members.html">Members</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
 
@@ -31,7 +31,7 @@
         <section id="contact-form">
             <h2>Get in Touch</h2>
             <p>If you have any questions or suggestions, feel free to reach out to us using the form below:</p>
-            <form action="/send_message.php" method="POST">
+            <form action="https://formspree.io/f/xldeyvlg" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
 
