--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -50,21 +50,21 @@
         <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
         <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/a323de90-fda7-403e-aa43-85e579b40579.image.png?v=1734542200960" alt="likeaboss" width="150" height="100"> </td>
         <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.18.22%20AM.png?v=1734542310291" alt="likeaboss" width="300" height="200"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/36cdbfeb-de73-408a-9e3c-1c2e6e099b71.image.png?v=1734542366938" alt="likeaboss" width="300" height="200"> </td>
       </tr>
        <tr>
        <td>Helcurt<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/hc.jpeg?v=1734540673251" alt="dehya" width="200" height="100"></td>
         <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
-        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.22.29%20AM.png?v=1734542557537" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.23.16%20AM.png?v=1734542602871" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.24.06%20AM.png?v=1734542652154" alt="likeaboss" width="300" height="200"> </td>
       </tr>
        <tr>
         <td>Julian<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/julian.jpeg?v=1734540743197" alt="dehya" width="200" height="100"></td>
         <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
-        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.25.32%20AM.png?v=1734542742143" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.26.19%20AM.png?v=1734542785933" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/140fe18f-716a-4944-a6f3-a2d50a246995.image.png?v=1734542937821" alt="likeaboss" width="300" height="200"> </td>
       </tr>
       <tr>
          <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/arlott.jpeg?v=1734540821840" alt="dehya" width="200" height="100"></td>
