🚉😹 Checkpoint ./public/contact.html:71334325/1394 ./public/effective-combos.html:69870694/746:71334325/684 ./public/index.html:71334325/5339 ./public/members.html:71334325/1429 ./.glitch-assets:69870694/1434 ./public/meta-heroes.html:71334325/683 ./public/about.html:71334325/1 ./public/style.css:71334325/2244

--- a/public/about.html
+++ b/public/about.html
@@ -23,7 +23,7 @@
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
             <li><a href="members.html">Members</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
 
