--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,12 @@
         <p>Your guide to dominating the Mobile Legends battlefield.</p>
     </header>
 
-    <nav class="sidebar">
+    <!-- Button to toggle the sidebar -->
+    <button id="sidebar-toggle" class="sidebar-toggle-btn">☰</button>
+
+    <nav class="sidebar" id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
