--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -69,9 +69,9 @@
       <tr>
          <td>Arlott<br><img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/arlott.jpeg?v=1734540821840" alt="dehya" width="200" height="100"></td>
         <td>Skill 1 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 2 - Skill 3 - AA</td>
-        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/82aa6ef6-2d9c-428f-a1e3-ddc494ac24c3.image.png?v=1734541491869" alt="likeaboss" width="150" height="100"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/23d62b24-233c-43f6-aaf8-cf280d05758d.image.png?v=1734541691014" alt="likeaboss" width="300" height="200"> </td>
-        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/536a3494-7b7d-4c49-a8b7-ca7cead5c59c.image.png?v=1734541825524" alt="likeaboss" width="300" height="200"> </td>
+        <td> <img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/Screenshot%202024-12-19%201.33.13%20AM.png?v=1734543201662" alt="likeaboss" width="150" height="100"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/0b91994a-2ff8-4a46-92cc-7c6731fd68a5.image.png?v=1734543087185" alt="likeaboss" width="300" height="200"> </td>
+        <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/dee4177b-088c-4a20-bf6c-b40259a08ae1.image.png?v=1734543122195" alt="likeaboss" width="300" height="200"> </td>
       </tr>
     </tbody>
           </table>
