--- a/public/members.html
+++ b/public/members.html
@@ -18,12 +18,12 @@
 
     <nav class="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
             <li><a href="members.html">Members</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
 
