--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,13 @@
         <p>Your guide to dominating the Mobile Legends battlefield.</p>
     </header>
 
-    <!-- Button to toggle the sidebar -->
-    <button id="sidebar-toggle" class="sidebar-toggle-btn">☰</button>
+    <!-- Button to toggle sidebar -->
+    <button id="sidebar-toggle-btn" class="sidebar-toggle-btn">☰</button>
 
-    <nav class="sidebar" id="sidebar">
+    <!-- Sidebar -->
+    <nav id="sidebar" class="sidebar">
         <ul>
-             <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="meta-heroes.html">Meta Heroes</a></li>
             <li><a href="effective-combos.html">Effective Combos</a></li>
@@ -44,6 +45,118 @@
         <p>Citing Sources: ONE Esports. (n.d.). ONE Esports. Retrieved December 19, 2024, from https://www.oneesports.gg/</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        // JavaScript to toggle sidebar
+        const sidebar = document.getElementById("sidebar");
+        const sidebarToggleBtn = document.getElementById("sidebar-toggle-btn");
+
+        sidebarToggleBtn.addEventListener("click", () => {
+            sidebar.classList.toggle("open");
+        });
+    </script>
+
+    <style>
+        /* Default styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header, footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f2f2f2;
+        }
+
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 60px;
+            height: 0;
+            background-color: #f0f0f0;
+            overflow: hidden;
+            transition: height 0.5s ease-out;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .sidebar.open {
+            height: 100%; /* Expand the sidebar */
+        }
+
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+        }
+
+        .sidebar li {
+            padding: 10px;
+            text-align: center;
+        }
+
+        .sidebar a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        .sidebar-toggle-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 20px;
+            cursor: pointer;
+            z-index: 200; /* Make sure the button stays above the sidebar */
+        }
+
+        main {
+            padding: 20px;
+            margin-left: 60px; /* Adjust content to avoid the small sidebar */
+        }
+
+        /* Adjust main content when sidebar is expanded */
+        .sidebar.open ~ main {
+            margin-left: 200px; /* Adjust for larger sidebar */
+        }
+
+        h1, h2, h3 {
+            margin-top: 0;
+        }
+
+        /* Make the sidebar responsive on smaller screens */
+        @media (max-width: 1024px) {
+            .sidebar {
+                width: 200px; /* Adjust width of sidebar */
+            }
+
+            .sidebar.open ~ main {
+                margin-left: 200px;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .sidebar {
+                width: 100%; /* Sidebar takes full width */
+                position: relative;
+            }
+
+            .sidebar.open ~ main {
+                margin-left: 0; /* Remove left margin for smaller screens */
+            }
+
+            .sidebar ul {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    </style>
 </body>
 </html>
