🎒🚦 Checkpoint ./public/effective-combos.html:71334325/340 ./public/meta-heroes.html:71334325/340

--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -199,6 +199,20 @@
                 flex-direction: column;
             }
         }
+      table {
+    width: 100%;
+    border-collapse: collapse; /* Ensures that borders between cells are merged */
+}
+
+th, td {
+    border: 1px solid black; /* Adds a 1px solid black border to table headers and cells */
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #f2f2f2; /* Light gray background for header */
+}
     </style>
 </body>
 </html>
