🚝💠 Checkpoint ./public/style.css:69870694/1113:71334325/744 ./public/about.html:69870694/1064 ./public/index.js:69870694/716

--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,26 @@
         <h1>About Us</h1>
         <p>Learn more about the creators and mission behind the Mobile Legends Meta Heroes website.</p>
     </header>
+    
+   <div class="slideshow-container">
+        <!-- Slideshow images -->
+        <div class="mySlides fade">
+            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/bane.jpeg?1734538316113" alt="Hero 1">
+            <div class="text">Hero 1 - Description</div>
+        </div>
+        <div class="mySlides fade">
+            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2Fhc.jpeg?1734540673251" alt="Hero 2">
+            <div class="text">Hero 2 - Description</div>
+        </div>
+        <div class="mySlides fade">
+            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2Fad4ab807-2bf8-4ebb-969c-7fa8e1d7ac05.image.png?1734538025413" alt="Hero 3">
+            <div class="text">Hero 3 - Description</div>
+        </div>
 
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
     <!-- Button to toggle sidebar -->
     <button id="sidebar-toggle-btn" class="sidebar-toggle-btn">☰</button>
 
