--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,33 @@
     <meta name="revised" content="September 23, 2024" />
     <title>Mobile Legend Meta Heroes: Builds and Skill Combos</title>
     <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 <body>
     <!-- Slideshow Background -->
-    <div class="slideshow-container">
-        <div class="mySlides fade">
-            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2F841ee1db-2051-4b00-a05d-a3043081e7b3.image.png?1734538008708" alt="Hero 1">
-        </div>
-        <div class="mySlides fade">
-            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/24fa89a2-eab2-49af-b772-7fbea82655b9.image.png?v=1734537931236" alt="Hero 2">
-        </div>
-        <div class="mySlides fade">
-            <img src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2Fbenedetta.jpeg?1734540607944" alt="Hero 3">
-        </div>
-    </div>
+    <!-- Start Content -->
+<div id="home" class="w3-content">
+
+<!-- Slides -->
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2Fbenedetta.jpeg?1734540607944" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/joy.jpeg?v=1734540340460" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2F841ee1db-2051-4b00-a05d-a3043081e7b3.image.png?1734538008708" width="100%">
+  
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2FScreenshot%202024-12-12%2010.24.53%20PM.png?1734013510420" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2F7e317001-e326-4293-8fd0-799187eb085e.image.png?1734538055796" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/thumbnails%2Fb4f78bd5-3478-4f10-9b6d-8bf9ad2939aa.image.png?1734541167684" width="100%">
+
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/5af05aec-a8a1-4b59-9437-990684f621fc.image.png?v=1734540938084" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/joy.jpeg?v=1734540340460" width="100%">
+<img class="slides" src="https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/arlott.jpeg?v=1734540821840" width="100%">
+<script>
+w3.slideshow(".slides", 1500);
+</script>
+
+<!-- End Content -->
+</div>
 
     <!-- Website Content -->
     <header>
