👲👨‍👨‍👦 Checkpoint ./public/members.html:69870694/143 ./public/meta-heroes.html:69870694/216 ./public/effective-combos.html:69870694/256:71334325/1 ./public/about.html:69870694/315 ./public/contact.html:69870694/157:71334325/7

--- a/public/contact.html
+++ b/public/contact.html
@@ -34,7 +34,7 @@
     <main>
         <section id="contact-form">
             <h2>Get in Touch</h2>
-            <p>If you have any questions or suggestions, feel free to reach out to us using the form below:</p>
+            <p>If you have any questions or suggestions, feel free to reach out to us using the form below(You):</p>
             <form action="https://formspree.io/f/xldeyvlg" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
@@ -52,7 +52,7 @@
 
     <footer>
         <p>© 2024 Mobile Legend Meta Heroes</p>
-        <p>Citing Sources: [Link to sources]</p>
+        <p>Citing Sources: ONE Esports. (n.d.). ONE Esports. Retrieved December 19, 2024, from https://www.oneesports.gg/</p>
     </footer>
 
    <script>
