--- a/public/effective-combos.html
+++ b/public/effective-combos.html
@@ -78,12 +78,14 @@
         <td><img src = "https://cdn.glitch.global/0a76087d-70c6-4b75-ace4-c40a965aa8bb/dee4177b-088c-4a20-bf6c-b40259a08ae1.image.png?v=1734543122195" alt="likeaboss" width="300" height="200"> </td>
       </tr>
     </tbody>
-          </table>u
+          </table>
      </section>
     </main>
 
     <footer>
         <p>© 2024 Mobile Legend Meta Heroes</p>
+     <p>Citing Sources: ONE Esports. (n.d.). ONE Esports. Retrieved December 19, 2024, from https://www.oneesports.gg/</p>
+      
   </footer>
    <script>
         // JavaScript to toggle sidebar
