--- a/public/members.html
+++ b/public/members.html
@@ -44,7 +44,7 @@
 
     <footer>
         <p>© 2024 Mobile Legend Meta Heroes</p>
-        <p>Citing Sources: [Link to sources]</p>
+        <p>Citing Sources: ONE Esports. (n.d.). ONE Esports. Retrieved December 19, 2024, from https://www.oneesports.gg/</p>
     </footer>
 
      <script>
