--- a/public/meta-heroes.html
+++ b/public/meta-heroes.html
@@ -71,6 +71,7 @@
 
     <footer>
         <p>© 2024 Mobile Legend Meta Heroes</p>
+      <p>Citing Sources: ONE Esports. (n.d.). ONE Esports. Retrieved December 19, 2024, from https://www.oneesports.gg/</p>
   </footer>
    <script>
         // JavaScript to toggle sidebar
