👴🚡 Checkpoint ./public/contact.html:69870694/6:71334325/37

--- a/public/contact.html
+++ b/public/contact.html
@@ -34,7 +34,7 @@
     <main>
         <section id="contact-form">
             <h2>Get in Touch</h2>
-            <p>If you have any questions or suggestions, feel free to reach out to us using the form below(You):</p>
+            <p>If you have any questions or suggestions, feel free to reach out to us using the form below. You'll be emailed an acknowledgement :></p>
             <form action="https://formspree.io/f/xldeyvlg" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
